k8s/ansible/k8s_yaml/frontend.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: eschool
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        - name: frontend
          image: bilkovsky/frontend:latest
          ports:
            - containerPort: 80

---

apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: eschool
spec:
  selector:
    app: frontend
  ports:
    - port: 80
      targetPort: 80
  type: ClusterIP
