k8s/ansible/k8s_yaml/mysql.yml

apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mysql
  namespace: eschool
spec:
  serviceName: "mysql"
  replicas: 1
  selector:
    matchLabels:
      app: mysql
  template:
    metadata:
      labels:
        app: mysql
    spec:
      containers:
        - name: mysql
          image: mysql:5.6
          ports:
            - containerPort: 3306

---

apiVersion: v1
kind: Service
metadata:
  name: mysql
  namespace: eschool
spec:
  ports:
    - port: 3306
  clusterIP: None
  selector:
    app: mysql
